--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -6,7 +6,7 @@
         <PlatformTarget>x64</PlatformTarget>
         <ImplicitUsings>true</ImplicitUsings>
         <Configurations>Debug R23;Debug R24;Debug R25</Configurations>
-        <Configurations>$(Configurations);Release R20;Release R21;Release R22;Release R23;Release R24;Release R25</Configurations>
+        <Configurations>$(Configurations);Release R23;Release R24;Release R25</Configurations>
     </PropertyGroup>
 
     <PropertyGroup Condition="$(Configuration.Contains('R23'))">
@@ -26,7 +26,7 @@
       <None Remove="Resources\Icons\icons8-analyse-34.png" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="RevitAddIns.addin">
+      <Content Include="AnalyzeTool.addin">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
