--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -7,6 +7,8 @@
         <ImplicitUsings>true</ImplicitUsings>
         <Configurations>Debug R23;Debug R24;Debug R25</Configurations>
         <Configurations>$(Configurations);Release R23;Release R24;Release R25</Configurations>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <PackageReleaseNotes>1.0.0</PackageReleaseNotes>
     </PropertyGroup>
 
     <PropertyGroup Condition="$(Configuration.Contains('R23'))">
