--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -78,4 +78,8 @@
       <Folder Include="DoorManager\Model\" />
       <Folder Include="DoorManager\ViewModel\" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\RevitApiLib\RevitApiLib\RevitApiLib\RevitApiLib\RevitApiLib.csproj" />
+    </ItemGroup>
 </Project>
