--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -23,8 +23,11 @@
     </PropertyGroup>
 	
     <ItemGroup>
+      <None Remove="Resources\Icons\AnalyzeTool_Icon.ico" />
+      <None Remove="Resources\Icons\DoorManager_Icon.ico" />
       <None Remove="Resources\Icons\icons8-analyse-34.ico" />
       <None Remove="Resources\Icons\icons8-analyse-34.png" />
+      <None Remove="Resources\Icons\ParameterControl_Icon.ico" />
     </ItemGroup>
 	
     <ItemGroup>
@@ -48,7 +51,6 @@
         </PackageReference>
         <PackageReference Include="FluentAssertions" Version="7.0.0" />
         <PackageReference Include="itext7" Version="8.0.4" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
         <PackageReference Include="Nice3point.Revit.Build.Tasks" Version="1.*" />
         <PackageReference Include="Nice3point.Revit.Toolkit" Version="$(RevitVersion).*" />
         <PackageReference Include="Nice3point.Revit.Extensions" Version="$(RevitVersion).*" />
@@ -65,12 +67,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Resource Include="Resources\Icons\AnalyzeTool_Icon.ico" />
+      <Resource Include="Resources\Icons\DoorManager_Icon.ico" />
       <Resource Include="Resources\Icons\icons8-analyse-34.ico">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </Resource>
       <Resource Include="Resources\Icons\icons8-analyse-34.png">
         <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       </Resource>
+      <Resource Include="Resources\Icons\ParameterControl_Icon.ico" />
     </ItemGroup>
 
     <ItemGroup>
