--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -23,14 +23,6 @@
     </PropertyGroup>
 	
     <ItemGroup>
-      <None Remove="Resources\Icons\AnalyzeTool_Icon.ico" />
-      <None Remove="Resources\Icons\DoorManager_Icon.ico" />
-      <None Remove="Resources\Icons\icons8-analyse-34.ico" />
-      <None Remove="Resources\Icons\icons8-analyse-34.png" />
-      <None Remove="Resources\Icons\ParameterControl_Icon.ico" />
-    </ItemGroup>
-	
-    <ItemGroup>
       <Content Include="AnalyzeTool.addin">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
@@ -55,20 +47,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Resource Include="Resources\Icons\AnalyzeTool_Icon.ico" />
-      <Resource Include="Resources\Icons\DoorManager_Icon.ico" />
-      <Resource Include="Resources\Icons\icons8-analyse-34.ico">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-      </Resource>
-      <Resource Include="Resources\Icons\icons8-analyse-34.png">
-        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-      </Resource>
-      <Resource Include="Resources\Icons\ParameterControl_Icon.ico" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Folder Include="Config\" />
       <Folder Include="DoorManager\Model\" />
       <Folder Include="DoorManager\ViewModel\" />
     </ItemGroup>
+
+    <Import Project="..\SharedData\SharedData.projitems" Label="Shared" />
 </Project>
