--- a/.github/workflows/StartNuke.yml
+++ b/.github/workflows/StartNuke.yml
@@ -8,41 +8,28 @@ on:
   workflow_dispatch:   # чтобы можно было вручную запускать
 
 jobs:
-  build:
-    runs-on: windows-latest
-
+  windows:
+    name: windows-2022
+    runs-on: windows-2022
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0   # нужно для правильной работы GitVersion/Changelog
-
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v4
+      - name: Cache packages
+        uses: actions/cache@v4
         with:
-          dotnet-version: 8.0.x
-
+          path: |
+            .nuke/temp
+            ~/.nuget/packages
+          key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
       - name: Run NUKE
         run: ./build.cmd Compile
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  release:
-    runs-on: windows-latest
-    needs: build
-    if: startsWith(github.ref, 'refs/tags/')   # релиз только при теге
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
-
-      - name: Run NUKE PublishGitHub
-        run: ./build.cmd PublishGitHub
+      - name: Run Nuke Build
+        run: ./.nuke/build.cmd PublishGitHub PublishNuget
         env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_VERSION: ${{ github.ref_name }}
