--- a/.github/workflows/Publish Release.yml
+++ b/.github/workflows/Publish Release.yml
@@ -2,10 +2,8 @@ name: Publish Release
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:   # чтобы можно было вручную запускать
+    tags:
+      - '*'
 
 jobs:
   windows:
