--- a/.github/workflows/Publish Release.yml
+++ b/.github/workflows/Publish Release.yml
@@ -2,7 +2,14 @@ name: Publish Release
 
 on:
   push:
-    branches: [ "main" ]
+    tags:
+      - '*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: "Release version"
+        required: true
+        type: string
 
 jobs:
   release:
