--- a/.github/workflows/Publish Release.yml
+++ b/.github/workflows/Publish Release.yml
@@ -10,7 +10,10 @@ on:
         description: "Release version"
         required: true
         type: string
-
+        
+permissions:
+  contents: write  
+  
 jobs:
   release:
     name: Publish release
