--- a/Installer/Installer.csproj
+++ b/Installer/Installer.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>WixSharp</RootNamespace>
-	<TargetFramework>net48</TargetFramework>
-    <RootNamespace>WixSharp</RootNamespace>
+	  <Nullable>enable</Nullable>
+	  <OutputType>Exe</OutputType>
+	  <LangVersion>latest</LangVersion>
+	  <PlatformTarget>x64</PlatformTarget>
+	  <TargetFramework>net48</TargetFramework>
+	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
   </PropertyGroup>
   
   <ItemGroup>
@@ -16,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="WixSharp_wix4" Version="2.8.0" />
-    <PackageReference Include="WixSharp_wix4.bin" Version="2.8.0" />
+	  <PackageReference Include="WixSharp.bin" Version="1.26.0"/>
+	  <PackageReference Include="WixSharp.wix.bin" Version="3.14.1"/>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
