--- a/AnalyseTool/Web/AnalyseToolView/package.json
+++ b/AnalyseTool/Web/AnalyseToolView/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "analysetoolview",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,11 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "chart.js": "^4.5.0",
+    "@primeuix/themes": "^1.2.3",
+    "primevue": "^4.3.9",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@primevue/auto-import-resolver": "^4.3.9",
     "@vitejs/plugin-vue": "^6.0.1",
+    "unplugin-vue-components": "^29.1.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
