--- a/AnalyseTool/Web/AnalyseToolView/package.json
+++ b/AnalyseTool/Web/AnalyseToolView/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.13",
+    "pinia": "^3.0.3",
     "primevue": "^4.3.9",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.18"
   },
   "devDependencies": {
