--- a/AnalyseTool/Web/AnalyseToolView/package.json
+++ b/AnalyseTool/Web/AnalyseToolView/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
+    "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18"
