--- a/AnalyseTool/Web/AnalyseToolView/package.json
+++ b/AnalyseTool/Web/AnalyseToolView/package.json
@@ -19,7 +19,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.3.9",
