--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -13,7 +13,15 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
-    "vue": "^3.5.22"
+    "@primeuix/themes": "^1.2.5",
+    "@tailwindcss/vite": "^4.1.17",
+    "chart.js": "^4.5.1",
+    "pinia": "^3.0.4",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.4.1",
+    "tailwindcss": "^4.1.17",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
