--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -105,4 +105,23 @@
 		<Copy SourceFiles="@(AddinFile)" DestinationFolder="$(RevitAddinsRoot)" SkipUnchangedFiles="true" />
 	</Target>
 	
+	<Target Name="CopyDistToRevitPlugin" AfterTargets="Build">
+		<Message Text="Copying clientapp/dist to Revit plugin..." Importance="high" />
+
+		<PropertyGroup>
+			<DistSource>$(SolutionDir)clientapp\dist</DistSource>
+			<DistTarget>$(SolutionDir)AnalyseTool\bin\$(Configuration)\net8.0-windows\AnalyseTool\</DistTarget>
+		</PropertyGroup>
+
+		<ItemGroup>
+			<DistFiles Include="$(DistSource)\**\*.*" />
+		</ItemGroup>
+
+		<Copy
+			SourceFiles="@(DistFiles)"
+			DestinationFolder="$(DistTarget)\%(RecursiveDir)"
+			SkipUnchangedFiles="true"
+      />
+	</Target>
+	
 </Project>
