--- a/AnalyseTool/AnalyseTool.csproj
+++ b/AnalyseTool/AnalyseTool.csproj
@@ -5,8 +5,8 @@
         <LangVersion>latest</LangVersion>
         <PlatformTarget>x64</PlatformTarget>
         <ImplicitUsings>true</ImplicitUsings>
-        <Configurations>Debug R24;Debug R25;Debug R26</Configurations>
-        <Configurations>$(Configurations);Release R24;Release R25;Release R26</Configurations>
+        <Configurations>Debug R25;Debug R26</Configurations>
+        <Configurations>$(Configurations);Release R25;Release R26</Configurations>
 		<GenerateAssemblyInfo>False</GenerateAssemblyInfo>
 		<Nullable>enable</Nullable>
 		
@@ -14,13 +14,6 @@
 
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     </PropertyGroup>
-
-	<PropertyGroup Condition="$(Configuration.Contains('R24'))">
-		<RevitVersion>2024</RevitVersion>
-		<TargetFramework>net48</TargetFramework>
-		<RevitAddinsRoot>$(AppData)\Autodesk\Revit\Addins\$(RevitVersion)</RevitAddinsRoot>
-		<RevitAddinDeployDir>$(RevitAddinsRoot)\AnalyseTool</RevitAddinDeployDir>
-	</PropertyGroup>
 	
     <PropertyGroup Condition="$(Configuration.Contains('R25'))">
         <RevitVersion>2025</RevitVersion>
@@ -110,7 +103,8 @@
 
 		<PropertyGroup>
 			<DistSource>$(SolutionDir)clientapp\dist</DistSource>
-			<DistTarget>$(SolutionDir)AnalyseTool\bin\$(Configuration)\net8.0-windows\AnalyseTool\</DistTarget>
+			<!--<DistTarget>$(SolutionDir)AnalyseTool\bin\$(Configuration)\net8.0-windows\AnalyseTool\</DistTarget>-->
+			<DistTarget>$(OutputPath)\AnalyseTool</DistTarget>
 		</PropertyGroup>
 
 		<ItemGroup>
