--- a/clientapp/.gitignore
+++ b/clientapp/.gitignore
@@ -8,6 +8,8 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+.env
+.env.*.local
 .DS_Store
 dist
 dist-ssr
@@ -23,6 +25,12 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+*.user
+.vs
+
+# .NET build artifacts
+bin/
+obj/
 
 *.tsbuildinfo
 
